--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
   font-weight: lighter;
   color: white;
   text-align: right;
+
+  background-color: #fea51e;
+  height: 100vh; /* Para cubrir toda la ventana del navegador */
 }
 
 @font-face {
@@ -13,11 +16,16 @@
   font-weight: light;
 }
 
+body, html {
+  overflow: auto;
+  height: 100%;
+}
+
 .Calculadora {
   display: flex;
-  margin: 10rem;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 
 #operaciones {
@@ -49,7 +57,7 @@
 
 .Calculadora_botones {
   padding: 3rem;
-  background-color: rgb(0, 0, 0);
+  background-color: black;
   border-top-left-radius: 50px;
   border-top-right-radius: 50px;
   border-bottom-right-radius: 50px;
@@ -187,41 +195,106 @@ button {
   background-repeat: no-repeat;
 }
 
-/* COSAS DE REACT POR PREDETERMINADO */
+/* Modificaciones para dispositivos móviles (pantallas pequeñas) */
+@media (max-width: 1400px) {
 
-/* Para pantallas más pequeñas (Movil) */
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  body, html {
+    overflow: hidden;
+    height: 100%;
   }
-  to {
-    transform: rotate(360deg);
+
+.App {
+  height: 100vh;
+  font-size:100px;
+}
+
+.Calculadora {
+  padding: 0.6rem;
+  height: 100vh;
+}
+
+.Calculadora_botones {
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1.1rem;
+  padding: 2.5rem;
+}
+
+#operaciones {
+  font-size: 0.30em;
+}
+
+#pantalla {
+  height: 80px; /* Aún más compacto */
+  font-size: 0.60em;
+}
+
+.pantalla.small-text {
+  display: block;
+  font-size: 0.80em;
+}
+
+.pantalla.extra-small-text {
+  display: block;
+  font-size: 0.60em; 
+}
+
+button {
+  height: 75px;
+  width: 75px;
+  font-size: 30px;
+}
+}
+
+/* Modificaciones para pantallas muy pequeñas (menos de 480px) */
+@media (max-width: 480px) {
+
+  body, html {
+    overflow: hidden;
+    height: 100%;
+    margin: 0;
+    padding: 0;
   }
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .App {
+    background: black;
+    background-color: black;
+    height: 100vh; /* Para cubrir toda la ventana del navegador */
+    font-size:100px;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  .Calculadora {
+    padding: 0.6rem;
+    height: 100vh;
+  }
 
-.App-link {
-  color: #61dafb;
+  .Calculadora_botones {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 0.8rem;
+    padding: 1.5rem;
+  }
+
+  #operaciones {
+    font-size: 0.30em;
+  }
+
+  #pantalla {
+    height: 80px; /* Aún más compacto */
+    font-size: 0.60em;
+  }
+
+  .pantalla.small-text {
+    display: block;
+    font-size: 0.80em;
+  }
+  
+  .pantalla.extra-small-text {
+    display: block;
+    font-size: 0.60em; 
+  }
+
+  button {
+    height: 75px;
+    width: 75px;
+    font-size: 30px;
+  }
 }
