--- a/src/App.css
+++ b/src/App.css
@@ -199,11 +199,11 @@ button {
 
   body, html {
     overflow: hidden;
-    height: 100%;
+    height: 100dvh;
   }
 
 .App {
-  height: 100vh;
+  height: 100dvh;
   font-size:100px;
 }
 
@@ -248,7 +248,7 @@ button {
 
   body, html {
     overflow: hidden;
-    height: 100%;
+    height: 100dvh;
     margin: 0;
     padding: 0;
     border: 0;
@@ -257,7 +257,7 @@ button {
   .App {
     background: black;
     background-color: black;
-    height: calc(100vh - env(safe-area-inset-bottom));
+    height: 100dvh;
     font-size:100px;
   }
 
